--- a/src/sass/partials/_message-list.scss
+++ b/src/sass/partials/_message-list.scss
@@ -157,6 +157,7 @@ table.message-list {
             position: relative;
             z-index: 2;
             padding: 0 1rem;
+            top: 1px;
             background-color: $base-color-dark;
         }
     }
